# civiccontracts-data

./: .gitignore  LICENSE  README.md
examples/: search_awards.py  search_awards.ts  top_recipients.py
python/: pyproject.toml
python/civiccontracts_data/: __init__.py  client.py
typescript/: package.json  tsconfig.json
typescript/src/: index.ts
