[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "civiccontracts-data"
version = "0.1.0"
description = "An open client for public U.S. government contract data (USAspending)."
readme = "../README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Civic AI" }]
keywords = ["government", "contracts", "usaspending", "procurement", "govcon"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Office/Business",
]
dependencies = []

[project.urls]
Homepage = "https://www.civiccontracts.com"
Repository = "https://github.com/puremetall/civiccontracts-data"

[tool.hatch.build.targets.wheel]
packages = ["civiccontracts_data"]
